@@ -130,8 +130,7 @@ class CallbackClient extends Ice.Application
                 }
                 else if(line.equals("f"))
                 {
-                    batchOneway.ice_flush();
-                    batchDatagram.ice_flush();
+		    communicator().flushBatchRequests();
                 }
                 else if(line.equals("S"))
                 {
