@@ -71,7 +71,5 @@ public interface ObjectPrx
     ObjectPrx ice_collocationOptimization(boolean b);
     ObjectPrx ice_default();
 
-    void ice_flush();
-
     boolean equals(java.lang.Object r);
 }
