@@ -527,33 +527,6 @@ public class ObjectPrxHelper implements ObjectPrx
         }
     }
 
-    public final void
-    ice_flush()
-    {
-	//
-	// Retry is necessary for ice_flush in case the current connection
-	// is closed. If that's the case we need to get a new connection.
-	//
-        int __cnt = 0;
-        while(true)
-        {
-            try
-            {
-                _ObjectDel __del = __getDelegate();
-                __del.ice_flush();
-                return;
-            }
-	    catch(Ice.DatagramLimitException ex)
-	    {
-	        throw ex; // DatagramLimitException is not repeatable.
-	    }
-            catch(LocalException __ex)
-            {
-                __cnt = __handleException(__ex, __cnt);
-            }
-        }
-    }
-
     public final boolean
     equals(java.lang.Object r)
     {
